background fixes, increased padding, rounded corners on buttons, aligned chat

--- a/MovieNight.css
+++ b/MovieNight.css
@@ -1,20 +1,20 @@
-html{
+html{ /* movienight's background is scuffed and fucks with the kf background. this turns it off  */
   background-image: none !important;
   background-color: transparent !important;
 }
 body {
- background-image: url("https://i.ibb.co/qxmyLkR/b6475fe6109775d51825b1701514a6c05a923e44.webp");
- background-color: #cccccc;
- background-size: contain;
+ background-image: url("https://i.ibb.co/qxmyLkR/b6475fe6109775d51825b1701514a6c05a923e44.webp"); /* kf background image */
+ background-color: #272b30; /* grey background, incase anyone insists the background image needs to go */ 
+ background-size: contain; 
 }
-#chatwrap{
-  background-color: #272b30;
-  padding-left:0px;
-}
-#main{
-  margin-left: -10px;
+
+#main{ 
+  margin-left: -5px;
   margin-right: -25px;
 }
+
+
+
 .nick-hover{
   background-color: rgba(17,17,34,0.9);
 }
@@ -56,13 +56,15 @@ body {
   display: none;
 }
 
-#chatwrap{
+#chatwrap{ /* add color to chat so the background doesn't show through */
+  background-color: #272b30; 
+  padding-left:0px;
   padding-right:3px;
   margin-bottom:5px;
 }
 
 #videowrap{
-  padding-left:3px;
+  padding-left:5px;
   margin-bottom:5px;
 }
 
@@ -74,29 +76,31 @@ body {
   position: relative; /* set leftcontrols to be the reference point for the absolute positioning of videocontrols */
 }
 
+
 #videocontrols {
   top: 0;
-  right: calc(100% + 20px); /* set the right property to be the width of the leftcontrols plus 10px of margin */
+  right: calc(100% + 10px); /* this is the part that moves the voteskip under chat for blind people */
 }
 
+
 #voteskip::before{
-  content: "Vote Skip";
+  content: "Vote Skip"; /* If people can't find the "voteskip" button after this, there's no helping them. */
   padding: 2px;
 }
 
-#resize-video-smaller{
+#resize-video-smaller{ /* padding for the video size buttons. */
   padding-right: 5px;
 }
 
-.server-msg-reconnect{
+.server-msg-reconnect{ /* makes the reconnect message pretty uwu */
   border-radius:5px;
 }
 
-#currenttitle{
+#currenttitle{ /* add a little padding to the movie title */ 
   padding-left: 5px;
 }
 
-#pollwrap > div {
+#pollwrap > div { /* reduce space between the poll and the chat. i'm hopping this will make polls easier for people to notice. */
   margin-top: 5px;
 }
 
@@ -112,4 +116,9 @@ body {
   position: relative;
   margin-top: 5px;
   width: 80%;
+}
+
+/* round the corner on buttons, without adding weird rounded corners in the middle of button groups */
+button, button:hover, button.close, button.close:hover, .btn, .btn:hover{
+  border-radius:3px;
 }
